# DirtyPDFCore

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt
doc/doxys/: Doxyfile.in
include/: annotable_page.hpp  annotation_manipulator.hpp  colors_manager.hpp  distances.hpp  document.hpp  documents_manager.hpp  history.hpp  ink_annotation_manipulator.hpp  ink_pen_tool.hpp  page.hpp  pen_tool.hpp  rubber_pen_tool.hpp  shape_tool.hpp  tool.hpp  tools_manager.hpp
src/: CMakeLists.txt  colors_manager.cpp  distances.cpp  document.cpp  documents_manager.cpp  history.cpp  ink_annotation_manipulator.cpp  ink_pen_tool.cpp  page.cpp  pen_tool.cpp  rubber_pen_tool.cpp  shape_tool.cpp  tools_manager.cpp
tests/: CMakeLists.txt  test_distances.cpp  test_document.cpp  test_documents_manager.cpp  test_history.cpp  test_ink_annotation_manipulator.cpp
tests/test_files/: CMakeLists.txt
